--- a/scss/components/_clients.scss
+++ b/scss/components/_clients.scss
@@ -1,4 +1,4 @@
-.clients__title {
+.section__title {
     color: var(--main-color);
     margin-bottom: 50px;
 
@@ -9,7 +9,7 @@
     letter-spacing: 0.03em;
 }
 
-.clients__list {
+.clients {
     display: flex;
 }
 
