--- a/scss/components/_occupation.scss
+++ b/scss/components/_occupation.scss
@@ -1,9 +1,9 @@
-.occupation {
+.section__no-padding-top {
     padding-top: 0;
 
 }
 
-.occupation__title {
+.section__title {
     color: var(--main-color);
     margin-bottom: 50px;
 
@@ -12,13 +12,16 @@
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
+
+}
+
+
+.occupation {
+    display: flex;
+
 }
 
 .occupation__item {
-    display: flex;
-}
-
-.occupation__thumb {
     position: relative;
     margin-right: 30px;
 
@@ -29,7 +32,7 @@
 
 
 
-.occupation__text {
+.occupation__title {
     color: var(--white-color);
     display: flex;
     justify-content: center;
@@ -44,5 +47,7 @@
     left: 0px;
     width: 100%;
     height: 70px;
+
+    position: absolute;
 
 }
